--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -3,7 +3,7 @@ name: Build Android APK
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:  # 手动触发
+  workflow_dispatch:
 
 jobs:
   build-apk:
@@ -11,10 +11,10 @@ jobs:
     
     steps:
     - name: 检出代码
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     
     - name: 设置 Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.10'
     
@@ -29,7 +29,6 @@ jobs:
       run: |
         pip install --upgrade pip
         pip install buildozer cython==0.29.33
-        pip install -r mobile/requirements_mobile.txt
     
     - name: 构建 APK
       working-directory: mobile
@@ -37,14 +36,14 @@ jobs:
         buildozer android debug
     
     - name: 上传 APK
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: HF-Downloader-APK
         path: mobile/bin/*.apk
     
     - name: 创建 Release（如果是 tag）
       if: startsWith(github.ref, 'refs/tags/')
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       with:
         files: mobile/bin/*.apk
       env:
