--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -8,58 +8,17 @@ on:
 jobs:
   build-apk:
     runs-on: ubuntu-latest
+    container:
+      image: kivy/buildozer:latest
     
     steps:
     - name: 检出代码
       uses: actions/checkout@v4
     
-    - name: 设置 Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
-    
-    - name: 安装系统依赖
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y git zip unzip openjdk-17-jdk python3-pip \
-          autoconf libtool pkg-config zlib1g-dev libncurses5-dev \
-          libncursesw5-dev cmake libffi-dev libssl-dev \
-          build-essential libltdl-dev
-    
-    - name: 设置 Android SDK
-      run: |
-        wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdtools.zip
-        mkdir -p $HOME/android-sdk/cmdline-tools
-        unzip -q cmdtools.zip -d $HOME/android-sdk/cmdline-tools
-        mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
-        echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
-        echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
-        echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
-    
-    - name: 接受 Android SDK 许可证
-      run: |
-        yes | sdkmanager --licenses || true
-        sdkmanager "platform-tools" "build-tools;30.0.3" "platforms;android-35"
-    
-    - name: 安装 Python 依赖
-      run: |
-        pip install --upgrade pip
-        pip install buildozer cython==0.29.33
-        pip install -r mobile/requirements_mobile.txt
-    
     - name: 构建 APK
       working-directory: mobile
       run: |
-        # 修改 buildozer.spec 以自动接受许可证
-        echo "" >> buildozer.spec
-        echo "# 自动接受 Android SDK 许可证" >> buildozer.spec
-        echo "android.accept_sdk_license = True" >> buildozer.spec
-        
-        # 运行构建
-        buildozer -v android debug
-      env:
-        CI: "true"
-        GRADLE_OPTS: "-Xmx2048m -Dorg.gradle.jvmargs=-Xmx2048m"
+        buildozer android debug
     
     - name: 上传 APK
       uses: actions/upload-artifact@v4
